Added Certifs logos

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri May 24 2024 11:15:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri May 24 2024 11:32:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@ fbq('track', 'PageView');
     <div class="section-hero">
       <div id="LANDING" class="background-layer"></div><img src="placeholder.svg" loading="lazy" alt="">
       <div class="hero-nav">
-        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="188" sizes="(max-width: 479px) 43vw, 188px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
+        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="188" sizes="(max-width: 479px) 50vw, 188px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
         <div class="hero-nav_button-wrapper">
           <a href="#Resume" class="button-icon-small-secondary margin-right-small mobile-margin-right-zero w-inline-block">
             <div class="text-block-2"> resume</div><img src="images/cv-file-interface-symbol-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
@@ -58,7 +58,8 @@ fbq('track', 'PageView');
             <div class="margin-bottom-medium">
               <h4 class="heading-3">A Passionate DevOps Engineer</h4>
             </div>
-            <p class="paragraph-large">I started my journey in Chemical and Nano Engineering, but in 2022, I found my true calling in DevOps &amp; Cloud Computing.<br>Firm believer in the +1 daily progress mantra.<br>‍<br>(For the best experience, please use a Desktop).<br></p>
+            <p class="paragraph-large">I started my journey in Chemical and Nano Engineering, but in 2022, I found my true calling in DevOps &amp; Cloud Computing.<br><br>Firm believer in the +1 Daily progress mantra.<br>‍<br>(For the best experience, please use a Desktop).<br></p>
+            <div class="waves-master-logos-2"><img src="images/ckad_from_cncfsite.png" loading="lazy" sizes="(max-width: 479px) 80px, (max-width: 1439px) 100px, 120px" srcset="images/ckad_from_cncfsite.png 500w, images/ckad_from_cncfsite.png 600w" alt="" class="waves-image-logo-2"><img src="images/cka.png" loading="lazy" sizes="(max-width: 479px) 80px, (max-width: 1439px) 100px, 120px" srcset="images/cka.png 500w, images/cka.png 600w" alt="" class="waves-image-logo-2"><img src="images/image-2.png" loading="lazy" sizes="(max-width: 479px) 80px, (max-width: 1439px) 100px, 120px" srcset="images/image-2.png 500w, images/image-2.png 800w, images/image-2.png 1080w, images/image-2.png 1538w" alt="" class="waves-image-logo-2"><img src="images/AWS-Certified-Solutions-Architect-Associate_badge.3419559c682629072f1eb968d59dea0741772c0f.png" loading="lazy" alt="" class="waves-image-logo-2"><img src="images/DVA.png" loading="lazy" sizes="(max-width: 479px) 80px, (max-width: 1439px) 100px, 120px" srcset="images/DVA.png 500w, images/DVA.png 600w" alt="" class="waves-image-logo-2"><img src="images/pcep.png" loading="lazy" sizes="(max-width: 479px) 80px, (max-width: 1439px) 100px, 120px" srcset="images/pcep.png 500w, images/pcep.png 729w" alt="" class="waves-image-logo-2"><img src="images/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" loading="lazy" alt="" class="waves-image-logo-2"></div>
             <div class="div-block-2">
               <a href="#Journey" class="link-block w-inline-block"><img src="images/scroll-up-1381-svgrepo-com.svg" loading="lazy" width="37" alt="" class="image-2"></a>
             </div>
