Changes Logs structure

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Sun May 26 2024 19:28:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Sun May 26 2024 19:46:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -59,7 +59,14 @@ fbq('track', 'PageView');
               <h4 class="heading-3">A Passionate DevOps Engineer</h4>
             </div>
             <p class="paragraph-large">I started my journey in Chemical and Nano Engineering, but in 2022, I found my true calling in DevOps &amp; Cloud Computing.<br><br>Firm believer in the +1 Daily progress mantra.<br>‍<br>(For the best experience, please use a Desktop).<br></p>
-            <div class="waves-master-logos-2"><img src="images/ckad_from_cncfsite.png" loading="lazy" sizes="(max-width: 479px) 80px, 100px" srcset="images/ckad_from_cncfsite-p-500.png 500w, images/ckad_from_cncfsite.png 600w" alt="" class="waves-image-logo-2"><img src="images/cka.png" loading="lazy" sizes="(max-width: 479px) 80px, 100px" srcset="images/cka-p-500.png 500w, images/cka.png 600w" alt="" class="waves-image-logo-2"><img src="images/DVA.png" loading="lazy" sizes="(max-width: 479px) 80px, 100px" srcset="images/DVA-p-500.png 500w, images/DVA.png 600w" alt="" class="waves-image-logo-2"><img src="images/AWS-Certified-Solutions-Architect-Associate_badge.3419559c682629072f1eb968d59dea0741772c0f.png" loading="lazy" alt="" class="waves-image-logo-2"><img src="images/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" loading="lazy" alt="" class="waves-image-logo-2"><img src="images/pcep.png" loading="lazy" sizes="(max-width: 479px) 80px, 100px" srcset="images/pcep-p-500.png 500w, images/pcep.png 729w" alt="" class="waves-image-logo-2"><img src="images/image-2.png" loading="lazy" sizes="(max-width: 479px) 80px, 100px" srcset="images/image-2-p-500.png 500w, images/image-2-p-800.png 800w, images/image-2-p-1080.png 1080w, images/image-2.png 1538w" alt="" class="waves-image-logo-2"></div>
+            <div class="waves---section-medium-2">
+              <div class="waves---main-container-2 w-container">
+                <div class="waves-master-logos-1">
+                  <div class="waves---paragraph-regular">Certified in </div>
+                  <div class="waves-wrap-logos-1"><img src="images/ckad_from_cncfsite.png" loading="lazy" id="w-node-_37aefc94-4940-7ba7-e159-21010df41a0e-b9adda82" sizes="100px" alt="" srcset="images/ckad_from_cncfsite-p-500.png 500w, images/ckad_from_cncfsite.png 600w" class="waves-image-logo-1"><img src="images/cka.png" loading="lazy" id="w-node-_37aefc94-4940-7ba7-e159-21010df41a0f-b9adda82" sizes="100px" alt="" srcset="images/cka-p-500.png 500w, images/cka.png 600w" class="waves-image-logo-1"><img src="images/AWS-Certified-Solutions-Architect-Associate_badge.3419559c682629072f1eb968d59dea0741772c0f.png" loading="lazy" id="w-node-_37aefc94-4940-7ba7-e159-21010df41a10-b9adda82" alt="" class="waves-image-logo-1"><img src="images/DVA.png" loading="lazy" id="w-node-_37aefc94-4940-7ba7-e159-21010df41a11-b9adda82" sizes="100px" alt="" srcset="images/DVA-p-500.png 500w, images/DVA.png 600w" class="waves-image-logo-1"><img src="images/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" loading="lazy" alt="" class="waves-image-logo-1"><img src="images/pcep.png" loading="lazy" sizes="100px" srcset="images/pcep-p-500.png 500w, images/pcep.png 729w" alt="" class="waves-image-logo-1"><img src="images/image-2.png" loading="lazy" sizes="100px" srcset="images/image-2-p-500.png 500w, images/image-2-p-800.png 800w, images/image-2-p-1080.png 1080w, images/image-2.png 1538w" alt="" class="waves-image-logo-1"></div>
+                </div>
+              </div>
+            </div>
             <div class="div-block-2">
               <a href="#Journey" class="link-block w-inline-block"><img src="images/scroll-up-1381-svgrepo-com.svg" loading="lazy" width="37" alt="" class="image-2"></a>
             </div>
