--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">‍<strong>Gained practical experience in cloud computing and started my second internship as a DevOps Engineer. Participated in meetings, contributing to user stories, by applying DevSecOps practices, writing AWS resources using Terraform, Designing Jenkins pipelines and its different stages.</strong><br></div>
+                <div class="timeline_text">‍<strong>Gained practical experience in cloud computing and started my second experience as a DevOps Engineer. Participated in meetings, contributing to user stories, by applying DevSecOps practices, writing AWS resources using Terraform, Designing Jenkins pipelines and its different stages.</strong><br></div>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
@@ -253,7 +253,7 @@ fbq('track', 'PageView');
               <div class="timeline_date-text">Today</div>
             </div>
             <div class="margin-bottom-small">
-              <div class="timeline_text">In pursuing new opportunities, I am deeply committed to DevSecOps practices, constantly enhancing my knowledge to apply robust security measures throughout the SDLC.<br><br>I also write articles DevOps related on Medium.<br><br>PS. This Website is 100% AWS-hosted <br>(Check my Github for more details about this project)<br></div>
+              <div class="timeline_text">I am currently focusing on developing my skills in Kubernetes security, with a particular emphasis on securing clusters.<br><br>I also write articles DevOps related on Medium.<br><br>PS. This Website is 100% AWS-hosted <br>(Check my Github for more details about this project)<br></div>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">Take a look at my Medium and GitHub profiles below 👇</p>
@@ -282,7 +282,7 @@ fbq('track', 'PageView');
               <h2 class="heading-4">Next Milestone</h2>
             </div>
             <div class="margin-bottom-medium">
-              <h4 class="heading">Having achieved the CKA and CKAD Kubernetes certifications, I am aiming to validate my 3rd Kubernetes certification, the CKS.</h4>
+              <h4 class="heading">Deeply committed to DevSecOps practices, constantly enhancing my knowledge to apply robust security measures throughout the SDLC.</h4>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">View my CV and LinkedIn profile below<br></p>
