Modified content on website

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Mon May 27 2024 12:46:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 30 2024 08:06:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65855a2d65005248b9adda82" data-wf-site="65855a2d65005248b9adda27" lang="en">
 <head>
   <meta charset="utf-8">
@@ -41,11 +41,8 @@ fbq('track', 'PageView');
     <div class="section-hero">
       <div id="LANDING" class="background-layer"></div><img src="placeholder.svg" loading="lazy" alt="">
       <div class="hero-nav">
-        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="188" sizes="(max-width: 479px) 43vw, 188px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
+        <a href="#LANDING" class="relume-link w-inline-block"><img src="images/Tamer-B-Portfolio.png" loading="lazy" width="188" sizes="(max-width: 479px) 170px, 188px" alt="" srcset="images/Tamer-B-Portfolio-p-500.png 500w, images/Tamer-B-Portfolio-p-800.png 800w, images/Tamer-B-Portfolio.png 1008w" class="image"></a>
         <div class="hero-nav_button-wrapper">
-          <a href="#Resume" class="button-icon-small-secondary margin-right-small mobile-margin-right-zero w-inline-block">
-            <div class="text-block-2"> resume</div><img src="images/cv-file-interface-symbol-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
-          </a>
           <a href="https://www.linkedin.com/in/tamer-ben-benhassan/" target="_blank" class="button-icon-small hide-mobile w-inline-block">
             <div class="text-block">Linkedln</div><img src="images/linkedin-svgrepo-com-1.svg" loading="lazy" alt="" class="button-icon">
           </a>
@@ -54,11 +51,11 @@ fbq('track', 'PageView');
       <div class="container">
         <div class="padding-vertical-xxlarge">
           <div class="timeline-hero_heading-wrapper">
-            <h1 class="heading-2">Hi, I&#x27;m Tamer<span class="text-underline"></span></h1>
+            <h1 class="heading-2">Hi, I&#x27;m Tamer</h1>
             <div class="margin-bottom-medium">
               <h4 class="heading-3">A Passionate DevOps Engineer</h4>
             </div>
-            <p class="paragraph-large">I started my journey in Chemical and Nano Engineering, but in 2022, I found my true calling in DevOps &amp; Cloud Computing.<br><br>Firm believer in the +1% Daily progress mantra.<br>‍<br>(For the best experience, please use a Desktop).<br>‍<br></p>
+            <p class="paragraph-large">I started my journey in Chemical and Nano Engineering, but in 2021, I found my true calling in Tech, DevOps &amp; Cloud Computing.<br><br>Firm believer in the +1 Daily progress mantra.<br>‍<br>(For the best experience, use a Desktop).<br>‍<br></p>
             <div class="waves---section-medium-3">
               <div class="waves---main-container-3 w-container">
                 <div class="waves-master-logos-3"><img src="images/ckad_from_cncfsite.png" loading="lazy" sizes="(max-width: 1919px) 100px, 140px" srcset="images/ckad_from_cncfsite-p-500.png 500w, images/ckad_from_cncfsite.png 600w" alt="" class="waves-image-logo-3"><img src="images/cka.png" loading="lazy" sizes="(max-width: 1919px) 100px, 140px" srcset="images/cka-p-500.png 500w, images/cka.png 600w" alt="" class="waves-image-logo-3"><img src="images/image.png" loading="lazy" sizes="(max-width: 1919px) 100px, 140px" srcset="images/image-p-500.png 500w, images/image.png 600w" alt="" class="waves-image-logo-3 saa"><img src="images/DVA.png" loading="lazy" sizes="(max-width: 1919px) 100px, 140px" srcset="images/DVA-p-500.png 500w, images/DVA.png 600w" alt="" class="waves-image-logo-3"><img src="images/twitter_thumb_201604_image.png" loading="lazy" sizes="(max-width: 1919px) 100px, 140px" srcset="images/twitter_thumb_201604_image-p-500.png 500w, images/twitter_thumb_201604_image.png 512w" alt="" class="waves-image-logo-3"><img src="images/image-2.png" loading="lazy" sizes="(max-width: 1919px) 100px, 140px" srcset="images/image-2-p-500.png 500w, images/image-2-p-800.png 800w, images/image-2-p-1080.png 1080w, images/image-2.png 1538w" alt="" class="waves-image-logo-3"><img src="images/pcep.png" loading="lazy" sizes="(max-width: 1919px) 100px, 140px" srcset="images/pcep-p-500.png 500w, images/pcep.png 729w" alt="" class="waves-image-logo-3"></div>
@@ -76,7 +73,7 @@ fbq('track', 'PageView');
         <div class="padding-vertical-xlarge">
           <div class="timeline-main_heading-wrapper">
             <div class="margin-bottom-medium">
-              <h2>The Journey of My Educational and Professional Career</h2>
+              <h2>MY JOURNEY</h2>
             </div>
             <p class="paragraph-large">My journey began with ONE perspective: &quot;Choose a job you love, and you will never have to work a day in your life.&quot;<br><br>My story starts 8 years ago... Strap in.</p>
           </div>
@@ -112,9 +109,23 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Enrolled in a Turkish university for Chemical Engineering as a new experience (as I was good in Maths and Chemistry🔬). <br><br>Faced challenges during COVID-19😷 in 2020, which led to reevaluating career choices due to the lack of online resources in the field which blocked my improvements that I had in mind.<br></div>
+                <div class="timeline_text">Pursued a degree in Chemical Engineering at a Turkish university, driven by my strong skills in Math and Chemistry and a desire for new experiences.<br>‍<br>Faced challenges during COVID-19😷 in 2020, which led to reevaluating career choices due to the lack of online resources in the field which blocked my improvements that I had in mind.<br></div>
               </div>
               <div class="timeline_image-wrapper"><img src="images/2.png" loading="lazy" width="480" sizes="(max-width: 479px) 48px, (max-width: 767px) 64px, (max-width: 991px) 36vw, (max-width: 1439px) 37vw, 470px" alt="" srcset="images/2-p-500.png 500w, images/2-p-800.png 800w, images/2.png 1080w"></div>
+            </div>
+          </div>
+          <div data-w-id="b80fde2c-7b29-ddaf-111a-4c050672eb34" class="timeline_item">
+            <div id="w-node-b80fde2c-7b29-ddaf-111a-4c050672eb35-b9adda82" class="timeline_left">
+              <div class="timeline_date-text">2020-2021</div>
+            </div>
+            <div id="w-node-b80fde2c-7b29-ddaf-111a-4c050672eb38-b9adda82" class="timeline_centre">
+              <div class="timeline_circle"></div>
+            </div>
+            <div class="timeline_right">
+              <div class="margin-bottom-medium">
+                <div class="timeline_text">During my gap year, I joined a Moroccan startup, where we focused on developing mobile apps. <br><br>I contributed to the app’s backend development, working with Supabase and PostgreSQL to design and structure data schemas.<br></div>
+              </div>
+              <div class="timeline_image-wrapper"><img src="images/supabase-postgresql-logos.png" loading="lazy" width="480" alt=""></div>
             </div>
           </div>
           <div data-w-id="5b7ae63b-6f00-e542-a023-96ea5c4a96e3" class="timeline_item">
@@ -126,7 +137,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">Following my Bachelor&#x27;s degree, I pursued a Master&#x27;s in Nanoscience, including an apprenticeship where I learned basic programming, particularly in Python and its libraries.<br></div>
+                <div class="timeline_text">After earning my Bachelor&#x27;s degree and gaining valuable experience as a mobile and backend developer, I decided to pursue a Master&#x27;s in Nanoscience once the pandemic ended.<br></div>
               </div>
               <a href="https://www.dew.recerca.urv.cat/en/research/publicacions/" target="_blank" class="timeline_link w-inline-block">
                 <div>Publications &amp; Theses references</div><img src="images/open_in_new.svg" loading="lazy" alt="" class="link-icon">
@@ -143,7 +154,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">A pivotal period where exposure to Python led to an interest in cloud computing, prompting self-study and online courses alongside Master&#x27;s studies.<br></div>
+                <div class="timeline_text">A pivotal period where exposure to Python in my Masters led to an interest in cloud computing, prompting self-study and online courses alongside Master&#x27;s studies.<br></div>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
@@ -165,7 +176,7 @@ fbq('track', 'PageView');
                 <div class="timeline_text">‍<strong>Graduated and fully committed to cloud computing, securing an internship in Woopcase, and earning my first AWS certification.</strong><br></div>
               </div>
               <div class="margin-bottom-medium">
-                <p class="text-colour-lightgrey">I got an internship in Woopcase thanks to my  friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
+                <p class="text-colour-lightgrey">I got an internship in Woopcase thanks to my friend (Thank you Simo 😃) where I got to learn a lot and see the practical world.<br><br>I went on developing my knowledge and validated my first AWS certification which gave me the confidence and boost me up to want more and learn more.<br></p>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
@@ -214,7 +225,7 @@ fbq('track', 'PageView');
             </div>
             <div class="timeline_right">
               <div class="margin-bottom-medium">
-                <div class="timeline_text">‍<strong>Gained practical experience in cloud computing and started my second experience as a DevOps Engineer. Participated in meetings, contributing to user stories, by applying DevSecOps practices, writing AWS resources using Terraform, Designing Jenkins pipelines and its different stages.</strong><br></div>
+                <div class="timeline_text">‍<strong>Gained practical experience in cloud computing and started my second internship as a DevOps Engineer. Participated in meetings, contributing to user stories, by applying DevSecOps practices, writing AWS resources using Terraform, Designing Jenkins pipelines and its different stages.</strong><br></div>
               </div>
               <div class="margin-bottom-xlarge">
                 <div class="inline-block">
@@ -253,7 +264,7 @@ fbq('track', 'PageView');
               <div class="timeline_date-text">Today</div>
             </div>
             <div class="margin-bottom-small">
-              <div class="timeline_text">I am currently focusing on developing my skills in Kubernetes security, with a particular emphasis on securing clusters.<br><br>I also write articles DevOps related on Medium.<br><br>PS. This Website is 100% AWS-hosted <br>(Check my Github for more details about this project)<br></div>
+              <div class="timeline_text">In pursuing new opportunities, I am deeply committed to DevSecOps practices, constantly enhancing my knowledge to apply robust security measures throughout the SDLC.<br><br>I also write articles DevOps related on Medium.<br><br>PS. This Website is 100% AWS-hosted <br>(Check my Github for more details about this project)<br></div>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">Take a look at my Medium and GitHub profiles below 👇</p>
@@ -282,15 +293,12 @@ fbq('track', 'PageView');
               <h2 class="heading-4">Next Milestone</h2>
             </div>
             <div class="margin-bottom-medium">
-              <h4 class="heading">Deeply committed to DevSecOps practices, constantly enhancing my knowledge to apply robust security measures throughout the SDLC.</h4>
+              <h4 class="heading">Having achieved the CKA and CKAD Kubernetes certifications, I am aiming to validate my 3rd Kubernetes certification, the CKS.</h4>
             </div>
             <div class="margin-bottom-large">
               <p class="paragraph-large">View my CV and LinkedIn profile below<br></p>
             </div>
             <div class="button-wrapper">
-              <a href="https://resume-tamer-benhassan-english.s3.amazonaws.com/Resume_Tamer_Ben.pdf" target="_blank" class="button-icon-small margin-right-small w-inline-block"><img src="images/pdf-svgrepo-com.svg" loading="lazy" alt="" class="button-icon">
-                <div class="text-block-4">CV</div>
-              </a>
               <a href="https://www.linkedin.com/in/tamer-ben-benhassan/" target="_blank" class="button-icon-small-secondary w-inline-block"><img src="images/linkedin-svgrepo-com-1.svg" loading="lazy" alt="" class="button-icon">
                 <div class="text-block-3">Linkedin</div>
               </a>
@@ -303,9 +311,6 @@ fbq('track', 'PageView');
           </div>
           <div class="footer_credits-wrapper">
             <p>© 2024, Tamer Benhassan. All Rights Reserved.</p>
-            <p class="text-link text-light-grey privacy-policy">
-              <a href="https://www.relume.io/privacy-policy" target="_blank" class="text-link text-light-grey">Privacy Policy</a>
-            </p>
           </div>
         </div>
       </div>
